:bug:Fixed website not rendering on apple devices(#321)+:wastebasket:Removed limitations of iOS to edit gap-text-questions (#249)+:bug:Fixed settings icon not being visible on safari (#323)+:rotating_light:Lines for extended-match questions now more closely connect the dots (wip) (#322)

--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -2,30 +2,22 @@
   position: -moz-sticky;
   position: -webkit-sticky;
   position: sticky;
-
   top: 0;
   bottom: 0;
-  height: 100vh;
 
   grid-column: 1;
   grid-row: 1/2;
 
-  /* left: 0; */
-
-  /* align-self: start; */
-
   /*Link width + Link padding (10px on each side)*/
+  height: 100vh;
+  height: 100dvh;
   max-width: 64px;
-  /* height: 100%; */
-
-  /* align-self: end end; */
-
-  background-color: rgb(12, 12, 20);
 
   display: flex;
   flex-direction: column;
   row-gap: 8px;
 
+  background-color: rgb(12, 12, 20);
   padding: 10px 10px 2px 10px;
   user-select: none;
   z-index: 100;
